[package]
name = "husk"
version = "0.1.3"
authors = ["Hunter Wittenborn <hunter@hunterwittenborn.com>"]
edition = "2021"
description = "Rust bindings for the mvdan.cc/sh Golang library"
repository = "https://github.com/hwittenborn/husk"
license = "BSD-3-Clause"
keywords = ["mvdan", "shell", "sh", "bash", "bats"]
categories = ["api-bindings", "parsing"]

[build-dependencies]
bindgen = "0.63.0"

[dependencies]
libc = "0.2.139"
